Fixing some spacing, remove repeated styles

--- a/assets/css/_setup.scss
+++ b/assets/css/_setup.scss
@@ -14,10 +14,9 @@ $grey-dark-color:     #280F5A;
 $grey-darkest-color:  #1E0F45;
 $brand-color:         #6645F5;
 $brand-light-color:   lighten($brand-color, 15%);
-$bold-color:          #36ef8b;
 $background-color:    $white;
 $text-color:          $black;
-$success-color:       #00CF96;
+$success-color:       #36EF8B;
 $warn-color:          #EB3B43;
 $dark-blue-color:     #0F325A;
 
