--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -96,9 +96,6 @@ small {
 .text-brand {
   color: $brand-color;
 }
-.text-bold {
-  color: $bold-color;
-}
 .text-grey-med {
   color: $grey-med-color;
 }
